# -

./: .env.example  .gitignore  LICENSE  README.md  Website sharing  api_client.py  game v1  minimal-order-mcp.skill  order_api.py  pyproject.toml  server.py
.claude/skills/minimal-order-mcp-workspace/: eval_review.html  optimization_log.txt  trigger_evals.json
.claude/skills/minimal-order-mcp-workspace/iteration-1/: benchmark.json  benchmark.md  evals.json  fix_grading.py  grade.py  review.html
.claude/skills/minimal-order-mcp-workspace/iteration-1/eval-1/with_skill/outputs/: order_api.py  pyproject.toml
.claude/skills/minimal-order-mcp-workspace/iteration-1/eval-1/with_skill/run-1/: grading.json  timing.json
.claude/skills/minimal-order-mcp-workspace/iteration-1/eval-1/without_skill/: grading.json  timing.json
.claude/skills/minimal-order-mcp-workspace/iteration-1/eval-1/without_skill/outputs/: api_client.py  order_api.py  pyproject.toml  server.py
.claude/skills/minimal-order-mcp-workspace/iteration-1/eval-2/with_skill/: timing.json
.claude/skills/minimal-order-mcp-workspace/iteration-1/eval-2/without_skill/: grading.json  timing.json
.claude/skills/minimal-order-mcp-workspace/iteration-1/eval-2/without_skill/outputs/: api_client.py  order_api.py  pyproject.toml  server.py
.claude/skills/minimal-order-mcp-workspace/iteration-1/eval-3/with_skill/: grading.json
.claude/skills/minimal-order-mcp-workspace/iteration-1/eval-3/without_skill/: grading.json  timing.json
(+10 files in other folders)
